# fake-store

./: .gitignore  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/auth/: dependencies.py  exceptions.py  routers.py  schemas.py  services.py
backend/core/: tasks.py
backend/core/dependencies/: redis.py
backend/core/models/: base.py
backend/core/repositories/: base.py  database_base.py  redis_base.py
backend/core/services/: email_service.py
backend/core/templates/: verify_email.html
backend/core/utils/: exceptions.py  jwt.py  validators.py
backend/migrations/: env.py
backend/migrations/versions/: 9332e81f2663_.py  a172b159ae04_.py  f08e12409d54_.py
backend/src/: celery.py  redis.py  settings.py
backend/users/: dependencies.py  exceptions.py  models.py  repositories.py  routers.py  schemas.py  services.py
